base/ns.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")

apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.namespace
