base/deployment.yaml

#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")

#@ prefix = data.values.prefix or ""
#@ suffix = data.values.suffix or ""

#@ def selector_labels():
app: #@ prefix + data.values.app_name
#@ end 

#@overlay/match by=overlay.subset({"kind": "Deployment"}),expects="1+"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-deploy
  labels: 
    obj_label: deployment
spec:
  replicas: #@ data.values.replicas
  selector:
    matchLabels: #@ selector_labels()
  template:
    metadata:
      labels: #@ selector_labels()
    spec:
      containers:  
      - name: spring-petclinic
        image: #@ data.values.image
        ports:
          - name: http
            containerPort: 8080        
        strategy:
          type: RollingUpdate
          rollingUpdate:
            maxSurge: 2        #! how many pods we can add at a time
            maxUnavailable: 0  #! maxUnavailable define how many pods can be unavailable  during the rolling update
        #@ end
      - image: redis
        imagePullPolicy: IfNotPresent
        name: test-pod
        resources: {}
---
spec:
  template:
    spec:
      #@overlay/match by=overlay.subset(None),expects="0+"
      #@overlay/remove
      volumes:
      #@overlay/match by=overlay.subset(None),expects="0+"
      #@overlay/remove
      initContainers:
      containers:
      #@overlay/match by=overlay.subset({"envFrom": None }),when="1+"
      -
        #@overlay/remove
        envFrom:
