base/service.yaml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic-svc
  namespace: #@ data.values.namespace
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: spring-petclinic
  #@ if data.values.svc_external_ip:
  type: LoadBalancer
  #@ else:
  type: ClusterIP
  #@ end
